--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,12 @@ ffmpeg
 ffprobe
 ffmpeg-python
 gtts
+pymongo[srv]==3.11.4
+python-telegram-bot==11.1.0
+Pillow
+ujson
+aiohttp
+python-dotenv
+py-tgcalls
+wheel
+humanize
