--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ tgcrypto
 youtube-dl
 youtube_search
 aiofiles
+motor==2.5.1
 git+https://github.com/cinemagoer/cinemagoer
 wget
 youtube-search-python==1.4.6
@@ -17,7 +18,7 @@ ffmpeg
 ffprobe
 ffmpeg-python
 gtts
-pymongo[srv]==3.11.4
+pymongo[srv]==3.12.3
 python-telegram-bot==11.1.0
 Pillow
 ujson
