--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,36 @@
-git+https://github.com/MKN-BOTZ/pyrogram         
+git+https://github.com/MKN-BOTZ/pyrogram 
+git+https://github.com/cinemagoer/cinemagoer      
 tgcrypto
-youtube-dl
-youtube_search
-aiofiles
-motor==2.5.1
-git+https://github.com/cinemagoer/cinemagoer
-wget
-youtube-search-python==1.4.6
-yt-dlp
-youtube_search
-asyncio
-psutil
-youtube_search_python
-requests
-ytthumb
-ffmpeg
-ffprobe
-ffmpeg-python
-gtts
 pymongo[srv]==3.12.3
-python-telegram-bot==11.1.0
+motor==2.5.1
+marshmallow==3.14.1
+umongo==3.0.1
+googletrans==3.1.0a0
+gTTS==2.3.1
+requests
+bs4
+telegraph==2.2.0
+opencv-python-headless
+requests
+NumPy
+glitch_this
+speedtest
+aiohttp==3.8.3
+aiofiles==22.1.0 
 Pillow
-ujson
-aiohttp
-python-dotenv
-py-tgcalls
-wheel
+pypng
+wget
+psutil
 humanize
+wheel
+py-tgcalls
+python-dotenv
+ujson
+beautifulsoup4
+pytz
+youtube-search
+youtube-search-python
+yt-dlp
+
+
+
