--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ yt-dlp
 #---imdb---#
 git+https://github.com/cinemagoer/cinemagoer
 
+
 #---others----#
 opencv-python-headless==4.7.0.68
 googletrans==3.1.0a0
@@ -34,3 +35,8 @@ speedtest==0.0.1
 humanize==4.6.0
 Pillow==9.4.0
 psutil==5.9.4
+NumPy
+wheel
+ujson
+wget
+pytz
