--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "PROFESSOR-BOT",
+    "name": "Megaverse_bot",
     "description": "the telegram Autofilter bot",
     "logo": "https://graph.org/file/b7e8484f6395a180b6380.jpg",
     "stack": "container",
     "keywords": ["telegram", "auto-filter"],
-    "website": "https://github.com/MrMKN/PROFESSOR-BOT",
-    "repository": "https://github.com/MrMKN/PROFESSOR-BOT",
+    "website": "https://github.com/Rajneesh058/Megaverse_bot",
+    "repository": "https://github.com/Rajneesh058/Megaverse_bot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
